Add IHotspotsSelectionService usage

--- a/src/IssueViz.Security/HotspotsList2/HotspotsControl2.xaml
+++ b/src/IssueViz.Security/HotspotsList2/HotspotsControl2.xaml
@@ -33,6 +33,7 @@
                   SelectionMode="Single"
                   SelectionUnit="FullRow"
                   IsSynchronizedWithCurrentItem="True"
+                  SelectedItem="{Binding SelectedHotspot, Mode=TwoWay}"
                   ItemsSource="{Binding Hotspots}">
             <DataGrid.InputBindings>
                 <MouseBinding
