--- a/src/IssueViz.Security/HotspotsList/HotspotsControl.xaml
+++ b/src/IssueViz.Security/HotspotsList/HotspotsControl.xaml
@@ -156,20 +156,25 @@
             <Setter Property="TextAlignment" Value="Left"/>
         </Style>
         <Style TargetType="ContextMenu">
-            <Setter Property="HasDropShadow" Value="True"/>
             <Setter Property="Width" Value="200"/>
             <Setter Property="Foreground" Value="{DynamicResource {x:Static vsShell:VsBrushes.MenuTextKey}}"/>
             <Setter Property="Background" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarMenuBackgroundGradientKey}}"/>
             <Setter Property="BorderBrush" Value="{DynamicResource {x:Static vsShell:VsBrushes.CommandBarMenuBorderKey}}"/>
-            <Setter Property="BorderThickness" Value="1"></Setter>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Margin" Value="2"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ContextMenu}">
                         <Border Background="{TemplateBinding Background}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
-                                SnapsToDevicePixels="true">
+                                SnapsToDevicePixels="true" 
+                                Margin="{TemplateBinding Margin}">
                             <StackPanel IsItemsHost="True" />
+                            <Border.Effect>
+                                <DropShadowEffect Color="{DynamicResource {x:Static vsShell:VsColors.ButtonShadowKey}}" 
+                                                  Opacity="0.80" ShadowDepth="2"/>
+                            </Border.Effect>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
